--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
-    "socket.io": "~0.9.14",
-    "body-parser":"3.10.10"
+    "socket.io": "~0.9.14"
   }
 }
