--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.18.0",
+    "cookie-parser": "^1.4.3",
+    "cool-ascii-faces": "^1.3.4",
     "express": "~3.2.4",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.5",
+    "md5": "^2.2.1",
+    "mongoose": "^4.11.11",
+    "passport": "^0.4.0",
     "socket.io": "~0.9.14"
   }
 }
