--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.18.0",
+    "bootstrap": "^4.0.0-beta",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "express": "~3.2.4",
